--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>title</title>
+    <title>Currency Exchange</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--build:css css/styles.min.css-->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
